--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </main>
     <footer class="bg-[#F9FAFB]">
       <div
-        class="w-full max-w-[1287px] mx-auto px-16 py-8 flex justify-between items-center"
+        class="w-full max-w-[1287px] mx-auto py-16 flex justify-between items-center"
       >
         <div>
           <h3 class="font-black text-4xl text-[#111827]">Ready to dive in?</h3>
